@@ -21,5 +21,5 @@ abs_top_srcdir='@abs_top_srcdir@'
 CXX='@CXX@'
 LD='@LD@'
 CONFIGURE_FLAGS='@DISTCHECK_CONFIGURE_FLAGS@'
-build='@build@'
-host='@host@'
+build_alias='@build_alias@'
+host_alias='@host_alias@'
